Add important instructions for .env file configuration

--- a/src/agent/coursesagent.ipynb
+++ b/src/agent/coursesagent.ipynb
@@ -345,8 +345,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "400c0b38",
+   "metadata": {},
+   "source": [
+    "# ‼️Important\n",
+    "\n",
+    "Make sure you add the following lines to the .env file\n",
+    "\n",
+    "```\n",
+    "COURSES_MCP_URL=http://127.0.0.1:8011/mcp/\n",
+    "HR_MCP_URL=http://127.0.0.1:8010/mcp/\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 134,
    "id": "35960475",
    "metadata": {},
    "outputs": [
